Switch from Go to a Swift project and workspace!
This doesn't mean it's only going to work on Apple devices.
While I will still primarily develop the server on Apple devices,
and the production one will still be a Mac, I'll check Windows
and Linux support Soon:tm:

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+## macOS bullsh**
 .DS_Store
+
+## Xcode user settings
+xcuserdata/
+Codesigning.xcconfig
+
+## xcodebuild
+build/
+
+## UNRAID things
+.fuse_hidden*
