[Server] Implement interactivity and colors!
Supports hot-reloading of data, exiting, and showing a help screen. Want to add testing
devices later, just don't want to do it at the moment.

This requires a lot of terminal attributes to be set and unset, so ymmv when using a terminal
that doesn't support these.

Working on reverting to a most-terminal-friendly design when requesting no colors or
interactivity.

--- a/api/Labradorite-Server.xcodeproj/xcshareddata/xcschemes/labradorite-server.xcscheme
+++ b/api/Labradorite-Server.xcodeproj/xcshareddata/xcschemes/labradorite-server.xcscheme
@@ -40,7 +40,9 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
-      viewDebuggingEnabled = "No">
+      viewDebuggingEnabled = "No"
+      consoleMode = "1"
+      structuredConsoleMode = "3">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -51,20 +53,6 @@
             ReferencedContainer = "container:Labradorite-Server.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = "--data"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "/Volumes/Dingus"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "--disable-safety"
-            isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
