[Server] Fix drilling, logging issues, completely rewrite Argument parsing
I'll probably rewrite the Device class to also use a similar system...

--- a/api/Labradorite-Server.xcodeproj/xcshareddata/xcschemes/labradorite-server.xcscheme
+++ b/api/Labradorite-Server.xcodeproj/xcshareddata/xcschemes/labradorite-server.xcscheme
@@ -41,8 +41,8 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       viewDebuggingEnabled = "No"
-      consoleMode = "1"
-      structuredConsoleMode = "3">
+      consoleMode = "0"
+      structuredConsoleMode = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -53,6 +53,20 @@
             ReferencedContainer = "container:Labradorite-Server.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--data"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "$(SRCROOT)/data"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--no-colors"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
