[Server] Rewrite Device, add "test" command, better terminal handling
No more risk of f***ing the user's terminal when the process crashes (or some other random bs...)

--- a/api/Labradorite-Server.xcodeproj/xcshareddata/xcschemes/labradorite-server.xcscheme
+++ b/api/Labradorite-Server.xcodeproj/xcshareddata/xcschemes/labradorite-server.xcscheme
@@ -66,6 +66,10 @@
             argument = "--no-colors"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--interactive"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
